@@ -1,3 +1,12 @@
+2005-03-16 17:06  patthoyts
+
+	* jim.c, jim.h: Added interpreter pointer to the command delete
+	  proc.
+
+2005-03-16 16:30  antirez
+
+	* ChangeLog, jim.c: Added the [env] command
+
 2005-03-16 14:35  antirez
 
 	* ChangeLog, jim.c: added CVS ID info in the banner.
